<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RestaurantActivity">

    <TextView
        android:id="@+id/RecommendRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_purple"
        android:text="@string/RecommendationOfBestRestaurant"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_bright"
        android:contentDescription="@string/RestaurantName"
        android:text="@string/RestaurantName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/design_default_color_primary_variant"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/restaurantInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RestaurantInfo"
        android:textAlignment="center"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/restaurantImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/RestaurantName"
        app:srcCompat="@drawable/geojerestarant" />

    <TextView
        android:id="@+id/restaurantReviewTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RestaurantReviewTextView" />

    <Button
        android:id="@+id/RestaurantExitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RestaurantExitButton" />
</LinearLayout>